# hmm_gait_phase_classifier

./: CMakeLists.txt  README.md  gait_det.xml  on_det_off_stream.xml  package.xml
config/: online_detection.yaml
include/hmm_gait_phase_classifier/: gait_cycle_classifier.hpp
launch/: gait_phase_det_training.launch  imu_data_exporter.launch  online_gait_phase_det.launch
log/: miguel.csv  patient_summary.txt
log/HMM_models/: carolina.txt  carolina_ff.txt  carolina_ho.txt  carolina_hs.txt  carolina_sp.txt  daniel.txt  daniel_ff.txt  daniel_ho.txt  daniel_hs.txt  daniel_sp.txt  healthy1.txt  healthy1_ff.txt  healthy1_ho.txt  healthy1_hs.txt  healthy1_sp.txt  healthy2.txt  healthy2_ff.txt  healthy2_ho.txt  healthy2_hs.txt  healthy2_sp.txt  healthy3.txt  healthy3_ff.txt  healthy3_ho.txt  healthy3_hs.txt  healthy3_sp.txt  healthy4.txt  healthy4_ff.txt  healthy4_ho.txt  healthy4_hs.txt  healthy4_sp.txt  healthy5.txt  healthy5_ff.txt  healthy5_ho.txt  healthy5_hs.txt  healthy5_sp.txt  healthy6.txt  healthy6_ff.txt  healthy6_ho.txt  healthy6_hs.txt  healthy6_sp.txt  (+35 more)
log/IMU_data/: carolina.csv  carolina_labels.csv  daniel.csv  daniel_labels.csv  fabian.csv  fabian_labels.csv  felipe.csv  felipe_labels.csv  miguel_sanchez.csv  miguel_sanchez_labels.csv
log/inter_labels/: andres_labels3.csv  carlos_labels3.csv  carmen_labels3.csv  carolina_labels3.csv  catalina_labels3.csv  claudia_labels3.csv  daniel_labels3.csv  emmanuel_labels3.csv  erika_labels3.csv  fabian_labels3.csv  felipe_labels3.csv  gustavo_labels3.csv  jonathan_labels3.csv  luis_labels3.csv  nathalia_labels3.csv  paula_labels3.csv  pedro_labels3.csv  tatiana_labels3.csv
log/intra_labels/: andres_labels1.csv  andres_labels2.csv  andres_labels3.csv  carlos_labels1.csv  carlos_labels2.csv  carlos_labels3.csv  carmen_labels1.csv  carmen_labels2.csv  carmen_labels3.csv  carolina_labels1.csv  carolina_labels2.csv  carolina_labels3.csv  catalina_labels1.csv  catalina_labels2.csv  catalina_labels3.csv  claudia_labels1.csv  claudia_labels2.csv  claudia_labels3.csv  daniel_labels1.csv  daniel_labels2.csv  daniel_labels3.csv  emmanuel_labels1.csv  emmanuel_labels2.csv  emmanuel_labels3.csv  erika_labels1.csv  erika_labels2.csv  erika_labels3.csv  fabian_labels1.csv  fabian_labels2.csv  fabian_labels3.csv  felipe_labels1.csv  felipe_labels2.csv  felipe_labels3.csv  gustavo_labels1.csv  gustavo_labels2.csv  gustavo_labels3.csv  jonathan_labels1.csv  jonathan_labels2.csv  jonathan_labels3.csv  luis_labels3.csv  (+12 more)
log/mat_files/: andres_proc_data1.mat  andres_proc_data2.mat  andres_proc_data3.mat  carlos_proc_data1.mat  carlos_proc_data2.mat  carlos_proc_data3.mat  carmen_proc_data1.mat  carmen_proc_data2.mat  carmen_proc_data3.mat  carolina_proc_data1.mat  carolina_proc_data2.mat  catalina_proc_data1.mat  catalina_proc_data2.mat  catalina_proc_data3.mat  claudia_proc_data1.mat  claudia_proc_data2.mat  claudia_proc_data3.mat  daniel_proc_data1.mat  emmanuel_proc_data1.mat  emmanuel_proc_data2.mat  emmanuel_proc_data3.mat  erika_proc_data1.mat  erika_proc_data2.mat  erika_proc_data3.mat  fabian_proc_data1.mat  fabian_proc_data2.mat  fabian_proc_data3.mat  felipe_proc_data1.mat  felipe_proc_data2.mat  generic_proc_data3.mat  gustavo_proc_data1.mat  gustavo_proc_data2.mat  gustavo_proc_data3.mat  jonathan_proc_data1.mat  jonathan_proc_data2.mat  jonathan_proc_data3.mat  luis_proc_data1.mat  luis_proc_data2.mat  luis_proc_data3.mat  miguel_rec_data.mat  (+12 more)
log/ref_labels/: andres_labels1.csv  andres_labels2.csv  andres_labels3.csv  carlos_labels1.csv  carlos_labels2.csv  carlos_labels3.csv  carmen_labels1.csv  carmen_labels2.csv  carmen_labels3.csv  carolina_labels1.csv  carolina_labels2.csv  carolina_labels3.csv  catalina_labels1.csv  catalina_labels2.csv  catalina_labels3.csv  claudia_labels1.csv  claudia_labels2.csv  claudia_labels3.csv  daniel_labels1.csv  daniel_labels2.csv  daniel_labels3.csv  emmanuel_labels1.csv  emmanuel_labels2.csv  emmanuel_labels3.csv  erika_labels1.csv  erika_labels2.csv  (+28 more)
scripts/: altern_hmm_node.py  imu_data_acquisition.py  imu_data_exporter.py  real-time-sliding_win.py  real_time_gait_phase_det.py  train_hmm.py
(+93 files in other folders)
